--- a/chat.html
+++ b/chat.html
@@ -64,5 +64,9 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./script.js"></script>
+    
 </body>
+<footer class="text-center">
+    <small>&copy; Pradeep Tarakar 2023</small>
+</footer>
 </html>
