added get chat-history

--- a/chat.html
+++ b/chat.html
@@ -31,13 +31,16 @@
         <div class="row">
             <div class="chat-container col-sm-12 col-md-8 col-lg-9 ">
                 <div class="user-info">
-                    <p><span class="user-title">User</span><i class="fa-solid fa-circle" style="color:green; font-size: 10px; padding: 10px;"></i></p>
+                    <p><span class="user-title">User</span>
+                        <i class="fa-solid fa-circle" style="color:green; font-size: 10px; padding: 10px;"></i>
+                        <button class="get-history btn btn-warning m-1"><i class="fa-solid fa-clock-rotate-left"></i> history</button>
+                    </p>
                     
                 </div>
                 <div class="msg-container">
 
                 </div>
-
+               
                 <!-- Chat input -->
                 <div class="chat-input-container row">
                     <div class="chat-input col-8 col-sm-8 col-md-8 col-lg-10">
